<resources>
    <string name="app_name">My Application</string>

    <!-- ___________ Pantalla de Carga ___________ -->
    <string name="txtPantallaCarga">Pantalla de carga</string>
    <string name="txtBtnPantCargaToPantInicio">Ir a pantalla de inicio</string>

    <!-- ___________ Pantalla de Inicio ___________ -->
    <string name="txtPantallaInicio">Pantalla de inicio</string>
    <string name="txtPantallaInicioTitulo">Kebab Maik</string>
    <string name="txtBtnPantInicioToPantMenus">Menús</string>
    <string name="txtBtnPantInicioToPantCarrito">Ir a pantalla del carrito</string>
    <string name="txtBtnPantInicioToPantAjustesUsuario">Ir a pantalla de ajustes de usuario</string>
    <string name="txtTituloTendencias">Tendencias</string>

    <!-- ___________ Pantalla de Menús ___________ -->
    <string name="txtPantallaMenus">Pantalla de Menús</string>
    <string name="txtBtnPantMenusToPantCarrito">Ir a pantalla del carrito</string>
    <string name="txtBtnPantMenusToPantInicio">Ir a pantalla de inicio</string>
    <string name="txtBarraBusquedaFuera">Buscar producto</string>
    <string name="txtBarraBusquedaDentro">Buscar productos…</string>
    <string name="txtApartadoPedidosMasPopulares">Pedidos más populares</string>
    <string name="txtHintDeLaBarraDeBusquedaDeProductos">Nombre del producto</string>

    <!-- ___________ Pantalla de Carrito ___________ -->
    <string name="txtPantallaCarrito">Pantalla de Carrito</string>
    <string name="txtBtnPantCarritoToPantMenus">Ir a pantalla de menús</string>
    <string name="txtBtnPantCarritoToPantInicio">Ir a pantalla de Inicio</string>
    <string name="txtBtnPantCarritoToPantProcesoPago">Ir a pantalla de Proceso de pago</string>

    <!-- ___________ Pantalla de Proceso de pago ___________ -->
    <string name="txtPantallaProcesoPago">Pantalla de Proceso de pago</string>
    <string name="txtBtnPantProcesoPagoToPantCarrito">Ir a pantalla de Carrito</string>

    <!-- ___________ Pantalla de Proceso de pago ___________ -->
    <string name="txtBtnAñadir">Añadir</string>


    <!-- ___________ Pantalla de Ajustes de Usuario ___________ -->
    <string name="txtPantallaAjustesUsuario">Pantalla de Ajustes de Usuario</string>
    <string name="txtCambiarDireccionHabitual">Cambiar dirección habitual</string>
    <string name="txtCambiarNombreDeUsuario">Cambiar nombre de usuario</string>
    <string name="txtCambiarNumTlf">Cambiar número de teléfono</string>
    <string name="txtCambiarEmail">Cambiar dirección Email</string>
    <string name="txtBtnPantAjustesUsuarioToPantInicio">Inicio</string>
    <string name="txtBtnPantAjustesUsuarioToPantPedidos">Pedidos</string>
    <string name="txtBtnPantAjustesUsuarioToPantPrivacidadYSeguridad">Privacidad y Seguridad</string>
    <string name="txtCerrarSesion">Cerrar sesión</string>
    <string name="txtBtnEditar">Editar</string>


    <!-- ___________ Pantalla de Pedidos ___________ -->
    <string name="txtPantallaPedidos">Pantalla de Pedidos</string>
    <string name="txtBtnPantPedidosToPantAjustesUsuario">Ir a pantalla de Ajustes de Usuario</string>

    <!-- ___________ Pantalla de Privacidad y Seguridad ___________ -->
    <string name="txtPantallaPrivacidadYSeguridad">Pantalla de Privacidad y Seguridad</string>
    <string name="txtBtnPantPrivacidadYSeguridadSeguridadToPantAjustesUsuario">Ir a pantalla de Ajustes de Usuario</string>
    <string name="title_activity_producto">Producto</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="lorem_ipsum">
        Lorem ipsum dolor sit amet, consectetur adipiscing elit. Nam in scelerisque sem. Mauris
        volutpat, dolor id interdum ullamcorper, risus dolor egestas lectus, sit amet mattis purus
        dui nec risus. Maecenas non sodales nisi, vel dictum dolor. Class aptent taciti sociosqu ad
        litora torquent per conubia nostra, per inceptos himenaeos. Suspendisse blandit eleifend
        diam, vel rutrum tellus vulputate quis. Aliquam eget libero aliquet, imperdiet nisl a,
        ornare ex. Sed rhoncus est ut libero porta lobortis. Fusce in dictum tellus.\n\n
        Suspendisse interdum ornare ante. Aliquam nec cursus lorem. Morbi id magna felis. Vivamus
        egestas, est a condimentum egestas, turpis nisl iaculis ipsum, in dictum tellus dolor sed
        neque. Morbi tellus erat, dapibus ut sem a, iaculis tincidunt dui. Interdum et malesuada
        fames ac ante ipsum primis in faucibus. Curabitur et eros porttitor, ultricies urna vitae,
        molestie nibh. Phasellus at commodo eros, non aliquet metus. Sed maximus nisl nec dolor
        bibendum, vel congue leo egestas.\n\n
        Sed interdum tortor nibh, in sagittis risus mollis quis. Curabitur mi odio, condimentum sit
        amet auctor at, mollis non turpis. Nullam pretium libero vestibulum, finibus orci vel,
        molestie quam. Fusce blandit tincidunt nulla, quis sollicitudin libero facilisis et. Integer
        interdum nunc ligula, et fermentum metus hendrerit id. Vestibulum lectus felis, dictum at
        lacinia sit amet, tristique id quam. Cras eu consequat dui. Suspendisse sodales nunc ligula,
        in lobortis sem porta sed. Integer id ultrices magna, in luctus elit. Sed a pellentesque
        est.\n\n
        Aenean nunc velit, lacinia sed dolor sed, ultrices viverra nulla. Etiam a venenatis nibh.
        Morbi laoreet, tortor sed facilisis varius, nibh orci rhoncus nulla, id elementum leo dui
        non lorem. Nam mollis ipsum quis auctor varius. Quisque elementum eu libero sed commodo. In
        eros nisl, imperdiet vel imperdiet et, scelerisque a mauris. Pellentesque varius ex nunc,
        quis imperdiet eros placerat ac. Duis finibus orci et est auctor tincidunt. Sed non viverra
        ipsum. Nunc quis augue egestas, cursus lorem at, molestie sem. Morbi a consectetur ipsum, a
        placerat diam. Etiam vulputate dignissim convallis. Integer faucibus mauris sit amet finibus
        convallis.\n\n
        Phasellus in aliquet mi. Pellentesque habitant morbi tristique senectus et netus et
        malesuada fames ac turpis egestas. In volutpat arcu ut felis sagittis, in finibus massa
        gravida. Pellentesque id tellus orci. Integer dictum, lorem sed efficitur ullamcorper,
        libero justo consectetur ipsum, in mollis nisl ex sed nisl. Donec maximus ullamcorper
        sodales. Praesent bibendum rhoncus tellus nec feugiat. In a ornare nulla. Donec rhoncus
        libero vel nunc consequat, quis tincidunt nisl eleifend. Cras bibendum enim a justo luctus
        vestibulum. Fusce dictum libero quis erat maximus, vitae volutpat diam dignissim.
    </string>

</resources>