<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Principales.AjustesUsuarioActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondo"
            tools:context=".Principales.PantallaDeMenusActivity">

            <Button
                android:id="@+id/button10"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnPantAjustesUsuarioToPantInicio"
                android:text="@string/txtBtnPantAjustesUsuarioToPantInicio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="79dp"
                android:layout_height="89dp"
                android:layout_marginTop="31dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView15"
                app:srcCompat="@drawable/icono_historial_pedidos_foreground" />

            <Button
                android:id="@+id/button11"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="52dp"
                android:layout_marginTop="48dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnPantAjustesUsuarioToPantPedidos"
                android:text="@string/txtBtnPantAjustesUsuarioToPantPedidos"
                app:layout_constraintStart_toEndOf="@+id/imageView"
                app:layout_constraintTop_toBottomOf="@+id/imageView15" />

            <Button
                android:id="@+id/button12"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="12dp"
                android:layout_marginTop="40dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnPantAjustesUsuarioToPantPrivacidad"
                android:text="@string/txtBtnPantAjustesUsuarioToPantPrivacidadYSeguridad"
                app:layout_constraintStart_toEndOf="@+id/imageView8"
                app:layout_constraintTop_toBottomOf="@+id/button11" />

            <ImageView
                android:id="@+id/imageView8"
                android:layout_width="72dp"
                android:layout_height="78dp"
                android:layout_marginStart="4dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView"
                app:srcCompat="@drawable/icono_privacidad_foreground" />

            <ImageView
                android:id="@+id/imageView12"
                android:layout_width="75dp"
                android:layout_height="87dp"
                android:layout_marginTop="194dp"
                app:layout_constraintTop_toBottomOf="@+id/button10"
                app:srcCompat="@drawable/icono_casa_foreground"
                tools:layout_editor_absoluteX="-1dp" />

            <ImageView
                android:id="@+id/imageView13"
                android:layout_width="75dp"
                android:layout_height="85dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView12"
                app:srcCompat="@drawable/icono_contacto_foreground" />

            <ImageView
                android:id="@+id/imageView14"
                android:layout_width="75dp"
                android:layout_height="72dp"
                android:layout_marginTop="5dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView13"
                app:srcCompat="@drawable/icono_telefono_foreground" />

            <ImageView
                android:id="@+id/imageView15"
                android:layout_width="74dp"
                android:layout_height="73dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView14"
                app:srcCompat="@drawable/icono_email_foreground" />

            <ImageView
                android:id="@+id/imageView17"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/icono_volver_foreground" />

            <ImageButton
                android:id="@+id/imageButton3"
                android:layout_width="48dp"
                android:layout_height="69dp"
                android:layout_marginEnd="32dp"
                android:layout_marginBottom="32dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView8"
                app:layout_constraintVertical_bias="1.0"
                app:srcCompat="@drawable/icono_cerrar_sesion_foreground" />

            <TextView
                android:id="@+id/textView16"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="16dp"
                android:text="@string/txtCerrarSesion"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageButton3"
                app:layout_constraintVertical_bias="0.0" />

            <ImageView
                android:id="@+id/imageView23"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="32dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button10"
                tools:srcCompat="@tools:sample/avatars" />

            <Button
                android:id="@+id/button18"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="36dp"
                android:layout_marginTop="128dp"
                android:text="@string/txtBtnEditar"
                app:layout_constraintStart_toEndOf="@+id/imageView23"
                app:layout_constraintTop_toTopOf="parent" />

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout2"
                android:layout_width="274dp"
                android:layout_height="47dp"
                android:layout_marginTop="100dp"
                app:layout_constraintStart_toEndOf="@+id/imageView12"
                app:layout_constraintTop_toBottomOf="@+id/button18">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="271dp"
                    android:layout_height="45dp"
                    android:layout_marginStart="8dp"
                    android:layout_marginTop="112dp"
                    android:hint="@string/txtCambiarDireccionHabitual" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout3"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="32dp"
                app:layout_constraintStart_toEndOf="@+id/imageView13"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout2">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtCambiarNombreDeUsuario" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout4"
                android:layout_width="334dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="2dp"
                android:layout_marginTop="19dp"
                app:layout_constraintStart_toEndOf="@+id/imageView14"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout3">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtCambiarNumTlf" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/textInputLayout5"
                android:layout_width="335dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="1dp"
                android:layout_marginTop="24dp"
                app:layout_constraintStart_toEndOf="@+id/imageView15"
                app:layout_constraintTop_toBottomOf="@+id/textInputLayout4">

                <com.google.android.material.textfield.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/txtCambiarEmail" />
            </com.google.android.material.textfield.TextInputLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>