<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo"
    tools:context=".Principales.CarritoActivity">
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"

        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="16dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/fondo"
            tools:context=".Principales.PantallaDeMenusActivity">

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginEnd="24dp"
                android:layout_marginBottom="184dp"
                android:fontFamily="@font/roboto_regular"
                android:text="@string/txtPantallaCarrito"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent" />

            <Button
                android:id="@+id/button6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="52dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnPantCarritoToPantInicio"
                android:text="@string/txtBtnPantCarritoToPantInicio"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView25" />

            <Button
                android:id="@+id/button7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="12dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnPantCarritoToPantMenus"
                android:text="@string/txtBtnPantCarritoToPantMenus"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button6" />

            <Button
                android:id="@+id/button14"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="84dp"
                android:layout_marginEnd="4dp"
                android:fontFamily="@font/roboto_regular"
                android:onClick="btnPantCarritoToPantProcesoPago"
                android:text="@string/txtBtnPantCarritoToPantProcesoPago"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/button7" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <androidx.constraintlayout.widget.Barrier
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                app:barrierDirection="top" />

            <ImageView
                android:id="@+id/imageView24"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="16dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@mipmap/foto_comida_demo" />

            <ImageView
                android:id="@+id/imageView25"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="36dp"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView24"
                app:srcCompat="@mipmap/foto_comida_demo" />

            <TextView
                android:id="@+id/textView27"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Nombre de producto"
                app:layout_constraintStart_toEndOf="@+id/imageView24"
                app:layout_constraintTop_toBottomOf="@+id/textView30" />

            <TextView
                android:id="@+id/textView28"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:text="Nombre de producto"
                app:layout_constraintStart_toEndOf="@+id/imageView25"
                app:layout_constraintTop_toBottomOf="@+id/textView29" />

            <TextView
                android:id="@+id/textView29"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="36dp"
                android:text="Precio"
                app:layout_constraintStart_toEndOf="@+id/imageView25"
                app:layout_constraintTop_toBottomOf="@+id/imageView24" />

            <TextView
                android:id="@+id/textView30"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="16dp"
                android:text="Precio"
                app:layout_constraintStart_toEndOf="@+id/imageView24"
                app:layout_constraintTop_toTopOf="parent" />

            <ImageButton
                android:id="@+id/imageButton2"
                android:layout_width="37dp"
                android:layout_height="35dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="19dp"
                android:backgroundTint="@color/fondo"
                app:layout_constraintEnd_toStartOf="@+id/imageButton6"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/foto_plus_foreground" />

            <ImageButton
                android:id="@+id/imageButton4"
                android:layout_width="37dp"
                android:layout_height="35dp"
                android:layout_marginStart="20dp"
                android:backgroundTint="@color/fondo"
                app:layout_constraintStart_toEndOf="@+id/imageView25"
                app:layout_constraintTop_toBottomOf="@+id/textView28"
                app:srcCompat="@drawable/foto_plus_foreground" />

            <ImageButton
                android:id="@+id/imageButton6"
                android:layout_width="42dp"
                android:layout_height="33dp"
                android:layout_marginTop="36dp"
                android:layout_marginEnd="16dp"
                android:backgroundTint="@color/fondo"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/foto_minus_foreground" />

            <ImageButton
                android:id="@+id/imageButton7"
                android:layout_width="39dp"
                android:layout_height="41dp"
                android:layout_marginStart="12dp"
                android:backgroundTint="@color/fondo"
                app:layout_constraintStart_toEndOf="@+id/imageButton4"
                app:layout_constraintTop_toBottomOf="@+id/textView28"
                app:srcCompat="@drawable/foto_minus_foreground" />

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>